<resources>
    <string name="app_name">TamangFood</string>
    <string name="tamang_food_service">Tamang FoodService</string>
    <string name="welcome">Welcome</string>
    <string name="title_walkthrough_1">All your favorites</string>
    <string name="title_walkthrough_2">Free delivery offers</string>
    <string name="title_walkthrough_3">Choose your food</string>
    <string name="description_welcome">It’s a pleasure to meet you. We are excited that you’re here so let’s get started!</string>
    <string name="description_walkthrough_1">Order from the best local restaurants with easy, on-demand delivery.</string>
    <string name="description_walkthrough_2">Free delivery for new customers via Apple Pay and others payment methods.</string>
    <string name="description_walkthrough_3">Easily find your type of food craving and you’ll get delivery in wide range. </string>
    <string name="get_started">get started</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to">Welcome to Tamang Food Services</string>
    <string name="enter_your_sign_in">Enter your Phone number or Email address for sign in. Enjoy your food :)</string>
    <string name="enter_your_forgot_password">Enter your email address and we will send you a reset instructions.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">enter your email</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="create_new_account">Create new account.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">reset password</string>
    <string name="reset_email_sent">Reset email sent</string>
    <string name="having_problem">Having problem?</string>
    <string name="we_have_sent_a_instructions_email_to">We have sent a instructions email to</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">full name</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="by_signing">By Signing up you agree to our Terms Conditions Privacy Policy.</string>
    <string name="connect_with_facebook">connect with facebook</string>
    <string name="connect_with_google">connect with google</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="send_again">send again</string>
    <string name="reset_email">Reset Email</string>
    <string name="enter_your_info">Enter your Name, Email and Password</string>
    <string name="phone_number">phone number</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend_again">Resend Again.</string>
    <string name="see_all">See all</string>
    <string name="featured_partners">Featured Partners</string>
    <string name="_25min">25min</string>
    <string name="free">Free</string>
    <string name="currency">$$</string>
    <string name="faq">faq</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="rate_us_playstore_appstor">Rate us playstore, appstor</string>
    <string name="rate_us">Rate Us</string>
    <string name="more">more</string>
    <string name="notifications">notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="for_daily_update_you_will_get_it">For daily update you will get it</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="promotional_notifications">Promotional Notifications</string>
    <string name="update_your_settings_like_notifications_payments_profile_edit_etc">Update your settings like notifications, payments, profile edit etc.</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="change_your_account_information">Change your account information</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_your_credit_amp_debit_cards"><![CDATA[Add your credit & debit cards]]></string>
    <string name="locations">Locations</string>
    <string name="add_or_remove_your_delivery_locations">Add or remove your delivery locations</string>
    <string name="add_social_account">Add Social Account</string>
    <string name="add_facebook_twitter_etc">Add Facebook, Twitter etc</string>
    <string name="refer_to_friends">Refer to Friends</string>
    <string name="get_10_for_reffering_friends">Get $10 for reffering friends</string>
    <string name="logout">Logout</string>
    <string name="best_picks_restaurants_by_team">Best Picks Restaurants by team</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="_4_5">4.5</string>
    <string name="_200_ratings">200+ Ratings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="featured_items">Featured Items</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="change_settings">change settings</string>
    <string name="choice_of_top_cookie">Choice of top Cookie</string>
    <string name="required">Required</string>
    <string name="chocolate_chip">Chocolate Chip</string>
    <string name="cookies_and_cream">Cookies and Cream</string>
    <string name="funfetti">Funfetti</string>
    <string name="m_and_m">M and M</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="peanut_butter">Peanut Butter</string>
    <string name="snickerdoodle">Snickerdoodle</string>
    <string name="white_chocolate_macadamia">White Chocolate Macadamia</string>
    <string name="choice_of_bottom_cookie">Choice of Bottom Cookie</string>
    <string name="add_to_order">add to order</string>
    <string name="_01">01</string>
    <string name="your_orders">Your Orders</string>
    <string name="promo_code">Promo code</string>
    <string name="add_more_item">Add more item</string>
    <string name="delivery">Delivery</string>
    <string name="subtotal">Subtotal</string>
    <string name="continues">continue</string>
    <string name="_4343">4343 4343 4343 4343 4343</string>
    <string name="proceed_payment">Proceed Payment</string>
    <string name="clear_all">clear all</string>
    <string name="upcoming_orders">Upcoming orders</string>
    <string name="past_orders">past orders</string>
    <string name="search_on_foodly">Search on foodly</string>
    <string name="top_restaurants">Top Restaurants</string>

</resources>