<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_back_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView4"
                style="@style/welcome_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/welcome_to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                style="@style/enter_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_sign_in"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textAllCaps="true"
                        android:textColor="#868686"
                        android:textSize="12sp" />

                    <EditText
                        android:backgroundTint="#F3F2F2"
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/enter_your_email"
                        android:inputType="text"
                        android:textColor="#010F07"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="#868686"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/edt_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_visibility_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:backgroundTint="#F3F2F2"
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_password"
                        android:inputType="numberPassword"
                        android:textColor="#010F07"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forget_password"
                android:textColor="#010F07"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/layout_btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bgr_button"
                android:paddingVertical="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget_password">

                <TextView
                    android:id="@+id/sign_in"
                    style="@style/get_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="true" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@+id/layout_btn_sign_in"
                app:layout_constraintStart_toStartOf="@+id/layout_btn_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/layout_btn_sign_in">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/don_t_have_account"
                    android:textColor="#010F07"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="#EEA734"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/or"
                android:textColor="#010F07"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_connect_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bgr_facebook"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/connect_with_facebook"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_connect_gg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bgr_google"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="@+id/layout_connect_fb"
                app:layout_constraintStart_toStartOf="@+id/layout_connect_fb"
                app:layout_constraintTop_toBottomOf="@+id/layout_connect_fb">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_gg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_connect_gg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/connect_with_google"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>