<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.AppCompat.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="?android:attr/actionBarSize"
                android:gravity="center"
                android:text="@string/reset_email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_email_sent"
                android:textSize="@dimen/text_size_34"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                style="@style/enter_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_have_sent_a_instructions_email_to"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/tv_name_user"
                style="@style/enter_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:text="Hoang" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/enter_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/tv_name_user"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:text="tamang@figma.com." />

            <TextView
                android:id="@+id/tv_having_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/having_problem"
                android:textColor="#EEA734"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toEndOf="@+id/tv_email"
                app:layout_constraintTop_toTopOf="@+id/tv_email" />


            <LinearLayout
                android:id="@+id/layout_btn_send_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/bgr_button"
                android:paddingVertical="19dp"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/tv_email">

                <TextView
                    android:id="@+id/sign_in"
                    style="@style/get_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_again"
                    android:textAllCaps="true" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="123dp"
                android:src="@drawable/coffee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_btn_send_again" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>