<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item"
            android:scaleType="centerInside"
            android:layout_marginTop="43dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_illustrations_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
        <TextView
            android:id="@+id/textView"
            style="@style/tamang_food"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxLines="2"
            android:text="@string/tamang_food_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_title"
            style="@style/all_your_fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/title_walkthrough_3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_item"
            app:layout_constraintStart_toStartOf="@+id/img_item"
            app:layout_constraintTop_toBottomOf="@+id/img_item" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/order_from_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineHeight="24sp"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            tools:text="@string/description_walkthrough_3"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:targetApi="p" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>